class capitalSocial{
  int? id;
  double valorTotal;
  String formaIntegralizacao;
  String prazoIntegralizacao;

  capitalSocial({
    this.id,
    required this.valorTotal,
    required this.formaIntegralizacao,
    required this.prazoIntegralizacao,
    
  });
}

