class Socio {
  int? id;
  String nome;
  String documento;
  String endereco;
  String profissao;
  double percentual;
  String tipo;
  String nacionalidade;
  String estadoCivil;

  Socio({
    this.id,
    required this.nome,
    required this.documento,
    required this.endereco,
    required this.profissao,
    required this.percentual,
    required this.tipo,
    required this.nacionalidade,
    required this.estadoCivil,

  });
}

